scrollbar hide and fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,3 +66,12 @@ html {
 .animate-breathe {
   animation: breathe 6s ease-in-out infinite;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
